# Skyhook

./: .gitignore  CHANGELOG.md  LICENSE  README.md  V0.2.0-PLAN.md  V0.3.0-PLAN.md  V0.6.0-PLAN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  known_hosts.rs  lib.rs  main.rs  settings.rs  sftp.rs  vault.rs
src-tauri/src/agent/: anthropic.rs  approval.rs  history.rs  keystore.rs  mod.rs  openai.rs  provider.rs  runner.rs  system_prompt.rs  tools.rs
src-tauri/src/session/: actor.rs  heartbeat.rs  mod.rs  reconnect.rs  shell.rs  state.rs
src-tauri/src/transfers/: engine.rs  job.rs  mod.rs
src-tauri/tests/: e2e_local_sshd.rs
src/components/: About.tsx  Browser.tsx  ConnectionForm.tsx  ContextMenu.tsx  Editor.tsx  EmptyState.tsx  KnownHostsManager.tsx  Properties.tsx  Resizer.tsx  Settings.tsx  Shortcuts.tsx  Sidebar.tsx  TabBar.tsx  Terminal.tsx  Toast.tsx  TransferPanel.tsx  Welcome.tsx
src/components/Agent/: AgentPanel.tsx  AgentSettings.tsx  ApprovalCard.tsx  Composer.tsx  ConversationList.tsx  DiffPreview.tsx  Message.tsx  MessageList.tsx  ToolCallCard.tsx
src/lib/: agent-store.ts  api.ts  editor-store.ts  events.ts  store.ts  terminal-store.ts
src/styles/: app.css  global.css
